[tool.poetry]
name = "replay-buffer"
version = "0.1.0"
description = ""
authors = ["Luke Ross <lukeross@umich.edu>"]
readme = "README.md"
packages = [{include = "replay_buffer"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.1"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"
pytest = "^7.2.0"
coverage = "^7.0.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
